[tool.poetry]
name = "comp_couch"
version = "0.1.0"
description = "CouchDB utilities"
authors = ["datadavev <datadavev@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
cloudant = "^2.14.0"
sphinx = {version = "^3.2.1", optional = true}
sphinx-autobuild = {version = "^2020.9.1", optional = true}
nbsphinx = {version = "^0.7.1", optional = true}
myst-nb = {version = "^0.10.1", optional = true}
sphinx-book-theme = {version = "^0.0.38", optional = true}
sphinxcontrib-bibtex = {version = "^1.0.0", optional = true}
sphinx-togglebutton = {version = "^0.2.2", optional = true}
sphinx-copybutton = {version = "^0.3.0", optional = true}

[tool.poetry.dev-dependencies]

[tool.poetry.extras]
docs = [
    "sphinx",
    "sphinx-autobuild",
    "nbsphinx",
    "myst-nb",
    "sphinx-book-theme",
    "sphinxcontrib-bibtex",
    "sphinx-togglebutton",
    "sphinx-copybutton",
]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
